<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discover Ticul</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="content_desc_explore_ticul">Explore Ticul</string>
    <string name="content_desc_shoes_shop">Shoes Shop</string>
    <string name="content_desc_handcrafts">HandCrafts</string>
    <string name="content_desc_where_to_eat">Where to eat</string>
    <string name="content_desc_hotels">Hotels</string>
    <string name="content_desc_help">Help</string>
    <string name="discover_ticul_text">Discover</string>
    <string name="shoe_makers_text">Shoes</string>
    <string name="handcrafts_text">HandCrafts</string>
    <string name="hotels_text">Hotels</string>
    <string name="restaurants_text">Restaurants</string>
    <string name="help_text">Help</string>
    <string name="title_activity_activity_explore">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment olle cy</string>
    <string name="title_shoestore_list">Shoes stores</string>
    <string name="title_shoestore_detail">Shoe store Detail</string>
    <string name="hotel_name_list">Hotel Revenue croie</string>
    <string name="hotel_direction_list">Calle 23 x 9 y 18c</string>
    <string name="list_hotel_image_desc">Hotel Image</string>
    <string name="button_back_label">Back</string>
    <string name="title_activity_maps">How To Get</string>
    <string name="image_view_shoestore_detail">imageViewDetail</string>
    <string name="title_handcraftstore_list">HandCraftStore</string>
    <string name="title_handcraftstore_detail">HandCraftStore Detail</string>
    <string name="title_restaurant_list">Restaurants</string>
    <string name="title_restaurant_detail">Restaurant Detail</string>
    <string name="title_hotel_list">Hotels</string>
    <string name="title_hotel_detail">Hotel Detail</string>
    <string name="hotel_list_base_price_text">From</string>
    <string name="title_activity_about">About Us</string>
    <string name="developer_name">Kokomu Softworks</string>
    <string name="developed_by_text">Desarrollado Por:</string>
    <string name="contac_title">Contacto:</string>
    <string name="email_title">Email:</string>
    <string name="email_direction">Contacto@kokomusoft.com</string>
    <string name="website_title">Sitio Web:</string>
    <string name="website_url">www.KokomuSoft.com</string>
    <string name="facebook_title">Facebook:</string>
    <string name="facebook_url">KokomuSoftworks</string>
    <string name="freepik_credits">Las imágenes en el menú principal, así como el fondo de esta sección, pertencen a Freepik.com</string>
    <string name="brands_copy_right">Las marcas que aparecen en esta aplicación son propiedad de sus respectivos dueños</string>
    <string name="title_activity_splash_screen">Discover Ticul</string>
    <string name="app_splash">splash screen image</string>
    <string name="app_description">Una guia turística y comercial en la palma de tus manos.</string>
    <string name="drawer_open">Options menu opened</string>
    <string name="drawer_close">Options menu closed</string>
    <string name="drawer_menu_title">Menu</string>

    <string-array name="drawerOptions">
        <item>Shoe Stores</item>
        <item>HandCraft Stores</item>
        <item>Restaurants</item>
        <item>Hotels</item>
    </string-array>

</resources>
