<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:id="@+id/mainMenu"
    tools:context=".MainActivity$PlaceholderFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnExploreTicul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/discover"
            android:contentDescription="@string/content_desc_explore_ticul" />

        <TextView
            android:id="@+id/DiscoverTiculTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/discover_ticul_text"/>

        <ImageButton
            android:id="@+id/imgBtnHandcrafts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/handcrafts"
            android:contentDescription="@string/content_desc_handcrafts"/>

        <TextView
            android:id="@+id/HandcraftsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/handcrafts_text"/>

        <ImageButton
            android:id="@+id/imgBtnHotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/hotels"
            android:contentDescription="@string/content_desc_hotels"/>

        <TextView
            android:id="@+id/HotelsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/hotels_text"/>


        </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="00dp"
        android:layout_weight="0.39"/>

    <LinearLayout
        android:id="@+id/secondLevelMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true">

        <ImageButton
            android:id="@+id/imgBtnShoeMakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/shoe_stores"
            android:contentDescription="@string/content_desc_shoes_shop"/>

        <TextView
            android:id="@+id/ShoeMakersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/shoe_makers_text"/>



        <ImageButton
            android:id="@+id/imgBtnRestaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/restaurants"
            android:contentDescription="@string/content_desc_where_to_eat"/>

        <TextView
            android:id="@+id/RestaurantsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/restaurants_text"/>



        <ImageButton
            android:id="@+id/imgBtnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="#00000000"
            android:src="@drawable/about"
            android:contentDescription="@string/content_desc_help"/>

        <TextView
            android:id="@+id/HelpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/help_text"/>

        </LinearLayout>


</LinearLayout>
